# RA22

./: CMakeLists.txt  README.md  clean.sh  counter.sh  doit.sh  instCounter.sh  main.c  rle_arr.c  rle_arr.h  rle_unpack.c  rle_unpack.h  rle_v2.c  rle_v2.h  test_data.h
perf/athlon/: rle_O1_ath.md  rle_O2_ath.md  rle_O3_ath.md  rle_ath.md
perf/pi/: rle_O1_pi.md  rle_O3_pi.md  rle_O_pi.md  rle_pi.md
perf/ryzen/: rle_O1_rz.md  rle_O2_rz.md  rle_O3_rz.md  rle_rz.md
stuff/: Pipeline_O2.ods
stuff/inCount/athlon/: athlon_arr_O0.csv  athlon_arr_O1.csv  athlon_arr_O2.csv  athlon_unpack_O0.csv  athlon_unpack_O2.csv  athlon_unpack_O3.csv
stuff/inCount/opteron/: opteron_arr_O1.csv  opteron_arr_O2.csv  opteron_arr_O3.csv  opteron_unpack_O0.csv  opteron_unpack_O1.csv  opteron_unpack_O2.csv  opteron_unpack_O3.csv
stuff/inCount/pi/: pi_arr_O0.csv  pi_arr_O1.csv  pi_arr_O2.csv  pi_unpack_O0.csv  pi_unpack_O1.csv  pi_unpack_O2.csv  pi_unpack_O3.csv
stuff/inCount/risc/: rv_arr_O0.csv  rv_arr_O1.csv  rv_arr_O3.csv  rv_unpack_O0.csv  rv_unpack_O1.csv  rv_unpack_O2.csv  rv_unpack_O3.csv
stuff/inCount/ryzen/: ryzen_unpack_O1.csv  ryzen_unpack_O2.csv
stuff/perf/athlon/: rle_O1_ath.md  rle_O2_ath.md  rle_O3_ath.md  rle_ath.md
stuff/perf/opteron/: rle_O1_opt.md  rle_O2_opt.md  rle_O3_opt.md  rle_opt.md
stuff/perf/pi/: rle_O1_pi.md  rle_O3_pi.md  rle_O_pi.md  rle_pi.md
stuff/perf/ryzen/: rle_O1_rz.md  rle_O2_rz.md  rle_O3_rz.md  rle_rz.md
stuff/pipeline/: Pipeline_O1.xlsx  Pipeline_O2.xlsx  Pipeline_O3.xlsx  Pipline_g.xlsx
stuff/specs/: amd_athlon.md  amd_opteron.md  amd_ryzen.md  pi_specs.md
